<resources>
    <string name="app_name">SR5 Guns</string>
    <string name="name">Name</string>
    <string name="damage">Damage</string>
    <string name="accuracy">Accuracy</string>
    <string name="ap">AP</string>
    <string name="mode">Mode</string>
    <string name="recoil">Recoil</string>
    <string name="ammo">Ammo</string>
    <string name="ss">SS</string>
    <string name="sa">SA</string>
    <string name="sab">SA(B)</string>
    <string name="bf">BF</string>
    <string name="lb">LB</string>
    <string name="fa">FA</string>
    <string name="sf">SF</string>
    <string name="error">Error</string>
    <string name="error_message">Unknown error!</string>
    <string name="single_shot">Single Shot</string>
    <string name="semi_auto">Semi Auto</string>
    <string name="semi_auto_burst">Semi Auto Burst</string>
    <string name="burst_fire">Burst Fire</string>
    <string name="long_burst">Long Burst</string>
    <string name="full_auto">Full Auto</string>
    <string name="supressive_fire">Suppressive Fire</string>
    <string name="action_new">New</string>
    <string name="recoil_comp">Recoil Comp</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="remove_current">Remove Current</string>
    <string name="add_new">Add New</string>
    <string name="ammo_type">Ammo Type</string>
    <string name="change">Change</string>
    <string name="damage_modifier">Damage Modifier</string>
    <string name="ap_modifier">AP Modifier</string>
    <string name="in_clip">In Clip</string>
    <string name="extra">Extra</string>
    <string name="add_ammo">Add Ammo</string>
    <string name="gun_type">Gun Type</string>
    <string name="save">Save</string>
    <string name="insert">Insert</string>
    <string name="cancel">Cancel</string>
    <string name="reload">Reload</string>
    <string name="delete">Delete</string>
    <string name="current">Current</string>
    <string name="character">Character</string>
    <string name="agility">Agility</string>
    <string name="strength">Strength</string>
    <string name="automatics">Automatics</string>
    <string name="longarms">Longarms</string>
    <string name="pistols">Pistols</string>
    <string name="exotic_ranged_weapon">Exotic ranged weapon</string>
    <string name="smart_link_aug">Smart link with augmentation</string>
    <string name="smartgun_over_laser">Use smart link over laser sight</string>
    <string name="wireless">Wireless</string>
    <string name="dice_pool">Dice Pool</string>
    <string name="current_recoil">Current Recoil Penalty</string>
    <string name="recoil_increase">Recoil\nIncrease</string>
    <string name="wound_penalty">Wound\nPenalty</string>
    <string name="reset_recoil">Reset Recoil</string>
    <string name="fire">Fire</string>
    <string name="firing_mode">Firing Mode</string>
    <string name="bullet_usage">Bullet\nUsage</string>
    <string name="enemy_defense_mod">Enemy\nDefense Mod</string>
    <string name="action_delete">Delete</string>
</resources>
