<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.sr5guns.CharacterActivity">

    <CheckBox
        android:id="@+id/chk_smart_link_aug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_link_aug"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/agility"/>

        <TextView
            android:text="@string/strength"/>

        <TextView
            android:text="@string/automatics"/>

        <TextView
            android:text="@string/longarms"/>

        <TextView
            android:text="@string/pistols"/>

        <EditText
            android:id="@+id/edit_agility"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="3"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edit_strength"
            android:ems="3"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edit_automatics"
            android:ems="3"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edit_longarms"
            android:ems="3"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edit_pistols"
            android:ems="3"
            android:inputType="number"/>

    </GridLayout>

    <TextView
        android:text="@string/exotic_ranged_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/list_exotics"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:onClick="saveRunner"/>

</LinearLayout>
