<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClipFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner_clips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_add_clip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_clips"
            android:text="@string/add_new"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_clips"
            android:layout_toRightOf="@+id/btn_add_clip"
            android:text="@string/delete"/>

        <TextView
            android:id="@+id/text_label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_add_clip"
            android:layout_marginRight="5dp"
            android:text="@string/ammo_type"/>

        <TextView
            android:id="@+id/text_ammo_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_label_1"
            android:layout_alignBaseline="@+id/btn_change_ammo_type"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:text="Regular"/>

        <Button
            android:id="@+id/btn_change_ammo_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_label_1"
            android:layout_toRightOf="@+id/text_ammo_type"
            android:text="@string/change"/>

        <Button
            android:id="@+id/btn_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_label_1"
            android:layout_toRightOf="@+id/btn_change_ammo_type"
            android:text="@string/reload"/>

        <RadioButton
            android:id="@+id/radio_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_change_ammo_type"
            android:text="@string/current"/>

        <GridLayout
            android:layout_below="@+id/radio_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/damage_modifier"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ap_modifier"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/in_clip"/>

            <TextView
                android:id="@+id/text_damage_mod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="Dmg Mod"/>

            <TextView
                android:id="@+id/text_ap_mod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="Ap Mod"/>

            <TextView
                android:id="@+id/text_in_clip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:text="4/5"/>

        </GridLayout>

    </RelativeLayout>

</FrameLayout>
